<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.jj.chatclient.Login">

    <TextView
            android:text="@string/string_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" android:id="@+id/login_title" android:textSize="24sp"
            android:padding="5dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="240dp" android:paddingLeft="30dp" android:paddingRight="30dp"
            android:layout_below="@+id/login_title" android:layout_alignParentStart="true">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edit_username" android:hint="@string/string_username" android:padding="5dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp" android:layout_below="@+id/login_title"
        >
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/edit_address" android:layout_weight="1" android:hint="@string/string_address"
                    android:padding="5dp"/>
            <TextView
                    android:text=":"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:id="@+id/textView3" android:padding="5dp"
                    android:textSize="24sp"/>
            <EditText
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/edit_port" android:hint="@string/string_port" android:padding="5dp"/>
        </LinearLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

            <Button
                    android:text="@string/string_connect"
                    android:layout_height="match_parent"
                    android:padding="5dp" android:layout_alignParentBottom="true" android:layout_alignParentEnd="true"
                    android:layout_width="75dp" android:id="@+id/button_connect"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
